package domain.service.student645;

public interface IAdventure {
    void story();
    void training();
}
