package domain.service.student645;

public interface IAnimal {
    int attack();
    int run();
}
