package domain.service.student645;

public interface IHuman extends IAnimal {
    int guard();
    int skill();
}
