package domain.service.student645;

public class MyAdventure extends AAdventure {
}
